--- a/goit-markup-hw-02/css/styles.css
+++ b/goit-markup-hw-02/css/styles.css
@@ -81,10 +81,12 @@ align-items: center;}
 margin-left: auto;
 align-items: center;}
 
-.header-contact-item + .header-contact-item {margin-right: 50px;} 
+.header-contact-item+.header-contact-item {
+    margin-left: 50px;
+}
 
 
-.nav-list-link:hover, :focus {color: #2196F3;}
+.nav-list-link:hover, .nav-list-link:focus {color: #2196F3;}
 
 .nav-list-link {font-family: 'Roboto';
     font-weight: 500;
@@ -105,18 +107,22 @@ align-items: center;}
 
 .contact-icon-link {margin-right: 10px;}
 
+
+
 .contact-icon {
-    color: #757575;
+    fill: #757575;
 }
+
+.header-contact:hover,  .header-contact:focus {color: #2196F3;}
 
 .contact-icon-link .contact-icon:hover,
 .contact-icon-link .contact-icon:focus {
-    color: #2196F3;
+    fill: #2196F3;
 }
 
 /*--------Main------------- */
 
-.main-container {padding-top: 94px;
+.hero {padding-top: 94px;
 padding-bottom: 94px;}
 
 
@@ -155,7 +161,7 @@ justify-content:center;
 }
 
 .btn-list-item:hover,.btn-list-item:focus
- {color: #FFFFFF; background-color: #2196F3; }
+ {color: #FFFFFF; background-color: #2196F3; box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);}
 
 
 
@@ -179,6 +185,8 @@ margin-right: 30px;
 margin-bottom: 30px;
 max-width: 370px;
 }
+
+.hero-list-item:hover {box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);}
 
 .border-cards {border: 1px solid #EEEEEE;
 padding: 20px 24px 20px 24px;}
@@ -245,3 +253,64 @@ font-style: normal;}
 
 .adress-list-item + .adress-list-item {margin-top: 4px;}
 
+/*-------------------Soc-seti---------------------*/
+
+
+.container-flex {
+    display: flex;
+    align-items: center;
+}
+
+
+.soc-seti {
+    min-width: 206px;
+    height: 80px;
+    margin-left: 70px;
+}
+
+
+.soc-seti-title {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    margin-bottom: 20px;
+}
+
+.soc-seti-list {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+
+.soc-seti-item:not(:last-child) {
+    margin-right: 10px;
+}
+
+.soc-seti-item {
+    width: 44px;
+    height: 44px;
+}
+
+
+.soc-seti-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-color: #2F303A;
+}
+
+.soc-seti-link:hover,
+.soc-seti-link:focus {
+    background-color: #2196F3;
+}
+
+.soc-seti-logo {
+    fill: #FFFFFF;
+}
