--- a/css/styles.css
+++ b/css/styles.css
@@ -284,6 +284,7 @@ justify-content: space-between;
 .person {
     padding-top: 94px;
     padding-bottom: 94px;
+    background-color: #F5F4FA;
 }
 
 .person-title {
@@ -306,7 +307,8 @@ justify-content: space-between;
 .person-list-item {box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);}
 
 .about-person {padding-top: 30px;
-padding-bottom: 30px;}
+padding-bottom: 30px;
+background-color: #FFFFFF;}
 
 .person-item-aftertitle {
     font-weight: 500;
@@ -379,7 +381,7 @@ margin-bottom: 50px;}
 .client-list {display: flex;
 justify-content: space-between;}
 
-.client-list-item {
+.client-list-link {
     border: 1px solid #AFB1B8;
     border-radius: 5%;
 } 
@@ -388,17 +390,14 @@ justify-content: space-between;}
 
 .client-list-link {display: block;
     padding: 16px 32px 16px 32px;
-color: #2196F3;}
+color: #AFB1B8;}
 
-.client-list-link:hover {
-    border: 1px solid #2196F3;
+.client-list-link:hover, .client-list-link:focus {
+    border: 1px solid #2196F3; color: #2196F3;
 }
 
-.client-list-logo {fill: #AFB1B8;}
+.client-list-logo {fill: currentColor;}
 
-
-.client-list-logo:hover, 
-.client-list-logo:focus {fill: currentColor;}
 
 
 
@@ -482,7 +481,7 @@ align-items: center;
 width: 100%;
  height: 100%;
  border-radius: 50%;
-background-color: #2F303A;
+background-color: rgba(255, 255, 255, 0.1);
 }
 
 .soc-seti-link:hover, .soc-seti-link:focus {background-color: #2196F3;}
