--- a/goit-markup-hw-02/css/styles.css
+++ b/goit-markup-hw-02/css/styles.css
@@ -307,7 +307,7 @@ font-style: normal;}
     width: 100%;
     height: 100%;
     border-radius: 50%;
-    background-color: #2F303A;
+    background-color: rgba(255, 255, 255, 0.1);
 }
 
 .soc-seti-link:hover,
